PulseAudio does not honor the "avoid-resampling" setting
PulseAudio on Ubuntu 18.04 apparently does not honor the "avoid-resampling = yes" configuration option. When I set the option to either "yes" or "true" (tried both) in /etc/pulse/daemon.conf
, restart PulseAudio and check to see the active configuration (using --dump-conf
), I get "avoid-resampling = no" every time.
I tried disabling PulseAudio daemonize mode and manually starting it from terminal, I tried setting the option globally and in ~/.config/pulse
, I tried restarting the system after setting the option. No difference.
Steps to reproduce the issue:
- Edit the
/etc/pulse/daemon.conf
file and add the following line, or uncomment the commented default and change it to "yes" (or "true"):
avoid-resampling = yes
-
Restart PulseAudio daemon
-
Print the loaded PulseAudio configuration by running
pulseaudio --dump-conf
-
Observe that it prints "avoid-resampling = no" every time