daemon-conf: fix printing avoid-resampling in pa_daemon_conf_dump()

The bool was inverted for some reason - maybe because the next line
prints enable-remixing that needs to be inverted from disable_remixing,
and somehow this logic was accidentally copied to the avoid-resampling
handling.

Fixes: https://gitlab.freedesktop.org/pulseaudio/pulseaudio/issues/568